--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <h1>Retrouvez la fluidité et la simplicité de Gmail sur tous vos appareils</h1>
             <a href="#">CREER UN COMPTE</a>
         </section>
+        <nav>
+            <a href="#create"><img src="./assets/arrow.png" alt="arrow"></a>
+        </nav>
     </header>
     <footer id="create">
         <section>
@@ -37,7 +40,7 @@
                     <label for="prenom">Prénom *</label>
                     <input type="text" id="prenom" name="prenom" placeholder="Votre prénom" required>
                     <label for="mail">Mail *</label>
-                    <input type="mail" id="mail" name="mail" placeholder="mail" required>
+                    <input type="email" id="mail" name="mail" placeholder="Votre mail" required>
                     <label for="password">Choisir votre mot de passe *</label>
                     <input type="password" id="password" name="password" placeholder="Votre mot de passe" required>
                     <input type="submit" value="VALIDER VOTRE COMPTE">
@@ -45,5 +48,6 @@
             </form>
         </section>
     </footer>
+    <script src="./js/app.js"></script>
 </body>
 </html>
