update nav add favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="gmail single page">
-    <title>Document</title>
+    <title>Gmail</title>
+    <link rel="icon" href="./assets/favicon.ico">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -23,12 +24,12 @@
             <a href="#">CREER UN COMPTE</a>
         </section>
         <nav>
-            <a href="#create"><img src="./assets/arrow.png" alt="arrow"></a>
+            <a href="#create"><img src="./assets/arrow_down.png" alt="arrow"></a>
         </nav>
     </header>
     <footer id="create">
         <section>
-            <div>
+            <div role="complementary">
                 <h2>Une boite de réception entièrement repensée</h2>
                 <p>Avec les nouveaux onglets personnalisables, repérez immédiatement les nouveaux messages et choisissez ceux que vous souhaitez lire en priorité</p>
             </div>
