--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         </nav>
         <section>
             <h1>Retrouvez la fluidité et la simplicité de Gmail sur tous vos appareils</h1>
-            <a href="#">CREER UN COMPTE</a>
+            <a href="#create">CREER UN COMPTE</a>
         </section>
         <nav>
-            <a href="#create"><img src="./assets/arrow_down.png" alt="arrow"></a>
+            <a href="#create" aria-hidden="true" tabindex="-1"><img src="./assets/arrow_down.png" alt="arrow"></a>
         </nav>
     </header>
     <footer id="create">
         <section>
             <div role="complementary">
-                <h2>Une boite de réception entièrement repensée</h2>
-                <p>Avec les nouveaux onglets personnalisables, repérez immédiatement les nouveaux messages et choisissez ceux que vous souhaitez lire en priorité</p>
+                <h2>Une boîte de réception entièrement repensée</h2>
+                <p>Avec les nouveaux onglets personnalisables, repérez immédiatement les nouveaux messages et choisissez ceux que vous souhaitez lire en priorité.</p>
             </div>
-            <form action="" method="POST">
+            <form action="#" method="POST">
                 <fieldset>
                     <legend>Créer un compte</legend>
                     <label for="nom">Nom *</label>
