--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                 <li><a href="#create" class="selected">créer un compte</a></li>
             </ul>
         </nav>
-        <section>
-            <h1>Retrouvez la fluidité et la simplicité de Gmail sur tous vos appareils</h1>
-            <a href="#create">CREER UN COMPTE</a>
-        </section>
         <nav>
             <a href="#create" aria-hidden="true" tabindex="-1"><img src="./assets/arrow_down.png" alt="arrow"></a>
         </nav>
     </header>
+    <main>
+        <h1>Retrouvez la fluidité et la simplicité de Gmail sur tous vos appareils</h1>
+        <a href="#create">CREER UN COMPTE</a>
+    </main>
     <footer id="create">
         <section>
             <div role="complementary">
