--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </main>
     <footer id="create">
         <section>
-            <div role="complementary">
-                <h2>Une boîte de réception entièrement repensée</h2>
+            <div role="region" aria-labelledby="heading">
+                <h2 id="heading">Une boîte de réception entièrement repensée</h2>
                 <p>Avec les nouveaux onglets personnalisables, repérez immédiatement les nouveaux messages et choisissez ceux que vous souhaitez lire en priorité.</p>
             </div>
             <form action="#" method="POST">
