--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
         <nav>
-            <a href="#create" aria-hidden="true" tabindex="-1"><img src="./assets/arrow_down.png" alt="arrow"></a>
+            <a href="#create" aria-hidden="true" tabindex="-1"><img src="./assets/arrow_down.svg" alt="arrow"></a>
         </nav>
     </header>
     <main>
