--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <h2 id="heading">Une boîte de réception entièrement repensée</h2>
                 <p>Avec les nouveaux onglets personnalisables, repérez immédiatement les nouveaux messages et choisissez ceux que vous souhaitez lire en priorité.</p>
             </div>
+            <dir role="status"></dir>
             <form action="#" method="POST">
                 <fieldset>
                     <legend>Créer un compte</legend>
@@ -49,6 +50,9 @@
             </form>
         </section>
     </footer>
+    <script src="./js/Form.js"></script>
+    <script src="./js/Toast.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/check.js"></script>
 </body>
 </html>
