--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h2 id="heading">Une boîte de réception entièrement repensée</h2>
                 <p>Avec les nouveaux onglets personnalisables, repérez immédiatement les nouveaux messages et choisissez ceux que vous souhaitez lire en priorité.</p>
             </div>
-            <dir role="status"></dir>
+            <div role="alert"></div>
             <form action="#" method="POST">
                 <fieldset>
                     <legend>Créer un compte</legend>
