--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="gmail single page">
+    <meta name="description" content="gmail">
     <title>Gmail</title>
     <link rel="icon" href="./assets/favicon.ico">
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/nav.css">
+    <link rel="stylesheet" href="./css/toast.css">
+    <link rel="stylesheet" href="./css/home.css">
 </head>
 <body>
     <header>
@@ -16,11 +18,11 @@
                 <li><a href="#">gmail</a></li>
                 <li><a href="#">pour les pros</a></li>
                 <li><a href="#">connexion</a></li>
-                <li><a href="#create" class="selected">créer un compte</a></li>
+                <li><a href="#create" class="active">créer un compte</a></li>
             </ul>
         </nav>
         <nav>
-            <a href="#create" aria-hidden="true" tabindex="-1"><img src="./assets/arrow_down.png" alt="arrow"></a>
+            <a href="#create" aria-hidden="true" tabindex="-1"><img src="./assets/arrow.png" alt="arrow"></a>
         </nav>
     </header>
     <main>
@@ -52,7 +54,7 @@
     </footer>
     <script src="./js/Form.js"></script>
     <script src="./js/Toast.js"></script>
-    <script src="./js/app.js"></script>
+    <script src="./js/arrow.js"></script>
     <script src="./js/check.js"></script>
 </body>
 </html>
