--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
         <nav>
-            <a href="#create" aria-hidden="true" tabindex="-1"><img src="./assets/arrow.png" alt="arrow"></a>
+            <a href="#create" aria-hidden="true" tabindex="-1"><img src="./assets/arrow.png" alt="fleche"></a>
         </nav>
     </header>
     <main>
