--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p>Avec les nouveaux onglets personnalisables, repérez immédiatement les nouveaux messages et choisissez ceux que vous souhaitez lire en priorité.</p>
             </div>
             <div role="alert"></div>
-            <form action="#" method="POST">
+            <form action="./src/add.inc.php" method="POST">
                 <fieldset>
                     <legend>Créer un compte</legend>
                     <label for="nom">Nom *</label>
@@ -46,6 +46,7 @@
                     <input type="email" id="mail" name="mail" placeholder="Votre mail" required>
                     <label for="password">Choisir votre mot de passe *</label>
                     <input type="password" id="password" name="password" placeholder="Votre mot de passe" required>
+                    <input type="hidden" name="csrf_token">
                     <input type="submit" value="VALIDER VOTRE COMPTE">
                 </fieldset>
             </form>
