--- a/connexion.html
+++ b/connexion.html
@@ -18,7 +18,7 @@
                 <li><a href="#">gmail</a></li>
                 <li><a href="#">pour les pros</a></li>
                 <li><a href="#" class="active">connexion</a></li>
-                <li><a href="/">créer un compte</a></li>
+                <li><a href="./index.php">créer un compte</a></li>
             </ul>
         </nav>
     </header>
