--- a/connexion.html
+++ b/connexion.html
@@ -23,10 +23,10 @@
         </nav>
     </header>
     <main>
-        <h1>Bonjour</h1>
+        <h1>Bonjour dans votre espace</h1>
         <form action="#" action="POST">
             <fieldset>
-                <legend>Connectez vous à votre page</legend>
+                <legend>Connectez vous à votre compte</legend>
                 <label for="mail">Mail *</label>
                 <input type="email" id="mail" name="mail" autofocus placeholder="Votre email" required>
                 <label for="password">Mot de passe *</label>
